; ModuleID = '/home/carl/AnghaBench/vim.js/src/extr_ex_getln.c_unputcmdline.c'
source_filename = "/home/carl/AnghaBench/vim.js/src/extr_ex_getln.c_unputcmdline.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i64, i64 }

@cmd_silent = common dso_local global i64 0, align 8
@TRUE = common dso_local global i32 0, align 4
@msg_no_more = common dso_local global i32 0, align 4
@ccline = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@FALSE = common dso_local global i32 0, align 4
@has_mbyte = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @unputcmdline() #0 {
  %1 = load i64, i64* @cmd_silent, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %4

3:                                                ; preds = %0
  br label %17

4:                                                ; preds = %0
  %5 = load i32, i32* @TRUE, align 4
  store i32 %5, i32* @msg_no_more, align 4
  %6 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @ccline, i32 0, i32 0), align 8
  %7 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @ccline, i32 0, i32 1), align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %11

9:                                                ; preds = %4
  %10 = call i32 @msg_putchar(i8 signext 32)
  br label %14

11:                                               ; preds = %4
  %12 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @ccline, i32 0, i32 1), align 8
  %13 = call i32 @draw_cmdline(i64 %12, i32 1)
  br label %14

14:                                               ; preds = %11, %9
  %15 = load i32, i32* @FALSE, align 4
  store i32 %15, i32* @msg_no_more, align 4
  %16 = call i32 (...) @cursorcmd()
  br label %17

17:                                               ; preds = %14, %3
  ret void
}

declare dso_local i32 @msg_putchar(i8 signext) #1

declare dso_local i32 @draw_cmdline(i64, i32) #1

declare dso_local i32 @cursorcmd(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
